# erl

./: Erl.hs  LICENSE  README  Toys.hs  erl.cabal  tests.hs
Erl/: BinRel.hs  Entity.hs  EntityMap.hs  EntitySet.hs  EntityType.hs  Monad.hs  Name.hs
Erl/Test/: BinRelTests.hs  EntityTests.hs  MonadTests.hs
ideas/: named-relations-and-attributes.txt  typeless-entities.txt
