name:           erl
version:        0.0.1
cabal-version:  >= 1.2 && < 2
author:         Kevin Charter
synopsis:       A tiny entity-relationship DSL.
build-type:     Simple

library
  exposed-modules: Erl.EntityType,
                   Erl.Entity,
                   Erl.Name
  build-depends:   base >= 4 && < 5,
                   text >= 0.10 && < 1
  ghc-options:     -fwarn-incomplete-patterns
                   -fwarn-unused-imports
                   -funbox-strict-fields
                   -O2
