name:           erl
version:        0.0.1
cabal-version:  >= 1.9.2 && < 2
author:         Kevin Charter
synopsis:       A tiny entity-relationship DSL.
build-type:     Simple
license:        BSD3
license-file:   LICENSE

library
  exposed-modules: Erl.Entity,
                   Erl.EntitySet,
                   Erl.Monad
  build-depends:   base >= 4 && < 5,
                   containers >= 0.4.0.0 && < 1,
                   mtl >= 2 && < 3
  ghc-options:     -fwarn-incomplete-patterns
                   -fwarn-unused-imports
                   -funbox-strict-fields
                   -O2

test-suite tests
  type:                 exitcode-stdio-1.0
  main-is:              tests.hs
  build-depends:        base >= 4 && < 5,
                        containers >= 0.4.0.0 && < 1,
                        mtl >= 2 && < 3,
                        text >= 0.10 && < 1,
                        QuickCheck >= 2 && < 3
